[package]
name = "hyperspace-client"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hyperspace-client"
path = "src/bin.rs"

[dependencies]
hyperspace-common = { path = "../common" }
async-std = { version = "1.6.2", features = ["attributes"] }
hrpc = { git = "https://github.com/Frando/hrpc-rs.git" }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
async-trait = "0.1.36"
anyhow = "1.0.31"
prost = "0.6.1"
chashmap = "2.2.2"
parking_lot = { version = "0.11.0", features = ["send_guard"] }
hex = "0.4.2"
clap = "3.0.0-beta.1"
