[package]
name = "hyperspace-common"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hrpc = { git = "https://github.com/Frando/hrpc-rs.git" }
async-trait = "0.1.36"
prost = "0.6.1"
futures = "0.3.5"
log = "0.4.8"

[build-dependencies]
hrpc-build = { git = "https://github.com/Frando/hrpc-rs.git" }
