[package]
name = "hypercore-replicator"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
futures = "0.3.5"
hypercore = { git = "https://github.com/Frando/datrs-hypercore", branch = "hyperspace" }
# hypercore-protocol = { git = "https://github.com/Frando/hypercore-protocol-rs" }
hypercore-protocol = { path = "../../hypercore-protocol" }
sparse-bitfield = "0.11.0"
hex = "0.4.2"
bitfield-rle = "0.2.0"
merkle-tree-stream = "0.12.1"
signature = "1.1.0"
log = "0.4.11"
