[package]
name = "hyperspace-server"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hyperspace-server"
path = "src/bin.rs"

[dependencies]
hyperspace-common = { path = "../common" }
hypercore-replicator = { path = "../replicator" }
corestore = { path = "../corestore" }
async-std = { version = "1.6.2", features = ["attributes"] }
hrpc = { git = "https://github.com/Frando/hrpc-rs.git" }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.11"
async-trait = "0.1.36"
anyhow = "1.0.31"
prost = "0.6.1"
hex = "0.4.2"
hyperswarm-dht = { git = "https://github.com/mattsse/hyperswarm-dht.git" }
clap = "3.0.0-beta.1"
dirs = "3.0.1"
async-signals = "0.3.1"
